Menambahkan backend pada form create

--- a/CRUD/src/output.css
+++ b/CRUD/src/output.css
@@ -601,6 +601,10 @@ video {
   border-radius: 0.25rem;
 }
 
+.border {
+  border-width: 1px;
+}
+
 .bg-blue-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(30 64 175 / var(--tw-bg-opacity));
